[Fix] Styling and optgroup not showing individual options.

--- a/scss/_select.scss
+++ b/scss/_select.scss
@@ -187,12 +187,16 @@
 
 			.optgroup {
 				cursor: default;
+				padding-left: 0;
 				li {
 					padding-left: 30px;
 					cursor: pointer;
 					&.optgroup-label {
 						padding-left: 10px;
 						color: $select-list-results-li-optgroup-color;
+						font-weight: 500;
+						font-size: 12px;
+						line-height: 12px;
 						cursor: default;
 						pointer-events: none;
 					}
